--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Estúdio de Desenho de Bobinagem</h1>
+        <h1>Estúdio de Desenho de Bobinagem José</h1>
     </header>
 
     <div class="container-principal">
